fixed layout issues on homepage

--- a/css/styles.css
+++ b/css/styles.css
@@ -180,7 +180,9 @@ html, body, main {
 }
 
 #welcome {
-    min-height: 160px;
+    display: flex;
+    align-items: center;
+    height: 70vh;
 }
 
 .page-intro {
